# PCB-Fr-smaschine

./: CMakeLists.txt  README.md  main.cpp
GCODE/: Program.gcode
altlasten/: altlast.cpp
pio/: pio_stepper-2.pio  pio_stepper.pio  pio_stepper.pio.h
source/CNC/: Axis.cpp  Axis.h  CNC_Compiler.cpp  CNC_Controler.h  CNC_Move.cpp  CNC_Safety.cpp  CNC_Utilities.cpp  Program.cpp  Program.h  Stepper.cpp  Stepper.h
source/LCD/: lcd.cpp  lcd.h
source/SD_Karte/: Files.cpp  Files.h  hw_config.cpp
source/geometrie/: geometrie.cpp  geometry.h
